Fixed layout bug in news on FP

--- a/packages/hp3css/css/fp_common_modules.css
+++ b/packages/hp3css/css/fp_common_modules.css
@@ -23,7 +23,7 @@ Stylesheet for the news.
 {
 	display: block;
 	float: left;
-	width: 416px;
+	width: 400px;
 	padding-top: 10px;
 	padding-right: 5px;
 }
